# YAP

./: .gitignore  CMakeLists.txt  Makefile  README.md  dzen-0.9.5_svn.toml  main.cpp
USR/share/man/man1/: dwm.1
include/: cpptoml.h  functions.h  package.h  utils.h  yap.h
src/: build.cpp  functions.cpp  main.cpp  package.cpp  toml_utils.cpp  utils.cpp  yap.cpp
test/: dwm-6.1.toml  dzen-0.9.5_svn.toml  dzen-test.toml
test/dwm/: dwm-6.1.ybh
test/dzen/: dzen-0.9.5_svn.ybh
